# meson-android-helloworld

./: .gitignore  README.md  meson-failing-cmake-sp.build  meson.build
cross/: android-armhf.ini  build-armv7a.sh
src/: helloworld-c.cpp
